Move create-pr to pipeline task

--- a/.azure-pipelines/generation-templates/generate-command-metadata-template.yml
+++ b/.azure-pipelines/generation-templates/generate-command-metadata-template.yml
@@ -18,7 +18,7 @@ steps:
   inputs:
     targetType: inline
     script: |
-      git status
+      git branch
       git add "$(System.DefaultWorkingDirectory)/src/Authentication/Authentication/custom/common/MgCommandMetadata.json"
       git commit -m 'Add generated MgCommandMetadata.json. [run ci]'
       git push "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git"
