--- a/.azure-pipelines/generation-templates/generate-helpdocs-template.yml
+++ b/.azure-pipelines/generation-templates/generate-helpdocs-template.yml
@@ -59,15 +59,9 @@ steps:
       git push --set-upstream "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git" $(ComputeBranch.DocsBranch)
       git status
 
-- task: PowerShell@2
-  displayName: Create Pull Request for Weekly Help Docs Generation
-  env:
-    GITHUB_TOKEN: $(GITHUB_TOKEN)
-  inputs:
-    pwsh: true
-    targetType: inline
-    script: |
-      $Title = "[v1] Weekly Help Docs Generation"
-      $Body = "This pull request was automatically created by Azure Pipelines. **Important** Check for unexpected deletions or changes in this PR."
-      $BaseBranch = "dev"
-      . $(System.DefaultWorkingDirectory)/scripts/create-pull-request.ps1 -Title $Title -Body $Body -BaseBranchName $BaseBranch
+- template: ../common-templates/create-pr.yml
+  parameters:
+    BaseBranch: "dev"
+    TargetBranch: $(ComputeBranch.DocsBranch)
+    Title: "[v1] Weekly Help Docs Generation"
+    Body: "This pull request was automatically created by Azure Pipelines. **Important** Check for unexpected deletions or changes in this PR."
