--- a/.azure-pipelines/generation-templates/generate-service-modules.yml
+++ b/.azure-pipelines/generation-templates/generate-service-modules.yml
@@ -164,19 +164,12 @@ jobs:
         - template: ./generate-command-metadata-template.yml
 
       - ${{ if eq(parameters.GeneratePullRequest, true) }}:
-        - task: PowerShell@2
-          displayName: Create Pull Request for generated build
-          env:
-            GITHUB_TOKEN: $(GITHUB_TOKEN)
-          inputs:
-            pwsh: true
-            targetType: inline
-            script: |
-              git status
-              $Title = "[v1] Weekly OpenApiDocs Refresh"
-              $Body = "This pull request was automatically created by Azure Pipelines. **Important** Check for unexpected deletions or changes in this PR."
-              $BaseBranch = "dev"
-              . $(System.DefaultWorkingDirectory)/scripts/create-pull-request.ps1 -Title $Title -Body $Body -BaseBranchName $BaseBranch
+        - template: ../common-templates/create-pr.yml
+          parameters:
+            BaseBranch: "dev"
+            TargetBranch: $(Branch)
+            Title: "[v1] Weekly OpenApiDocs Refresh"
+            Body: "This pull request was automatically created by Azure Pipelines. **Important** Check for unexpected deletions or changes in this PR."
 
       - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
         displayName: ESRP DLL strong name (Service Modules)
