--- a/openApiDocs/v1.0/Sites.yml
+++ b/openApiDocs/v1.0/Sites.yml
@@ -2665,11 +2665,8 @@ paths:
     get:
       tags:
         - groups.site
-      summary: Get Drive
-      description: 'Retrieve the properties and relationships of a Drive resource. A Drive is the top-level container for a file system, such as OneDrive or SharePoint document libraries.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/drive-get?view=graph-rest-1.0
+      summary: Get drive from groups
+      description: The default drive (document library) for this site.
       operationId: groups.sites_GetDrive
       parameters:
         - name: group-id
@@ -2756,11 +2753,8 @@ paths:
     get:
       tags:
         - groups.site
-      summary: List available drives
-      description: 'Retrieve the list of Drive resources available for a target User, Group, or Site.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/drive-list?view=graph-rest-1.0
+      summary: Get drives from groups
+      description: The collection of drives (document libraries) under this site.
       operationId: groups.sites_ListDrives
       parameters:
         - name: group-id
@@ -55816,11 +55810,11 @@ paths:
     get:
       tags:
         - sites.site
-      summary: Search for sites
-      description: 'Search across a SharePoint tenant for [sites][] that match keywords provided. The only property that works for sorting is **createdDateTime**. The search filter is a free text search that uses multiple properties when retrieving the search results.'
+      summary: List sites
+      description: 'List all available sites][] in an organization. Specific filter criteria and query options are also supported and described below: In addition, you can use a **[$search][]** query against the `/sites` collection to find sites matching given keywords. For more guidance about building applications that use site discovery for scanning purposes, see [Best practices for discovering files and detecting changes at scale.'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/site-search?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/site-list?view=graph-rest-1.0
       operationId: sites.site_ListSite
       parameters:
         - $ref: '#/components/parameters/top'
@@ -58631,11 +58625,8 @@ paths:
     get:
       tags:
         - sites.drive
-      summary: Get Drive
-      description: 'Retrieve the properties and relationships of a Drive resource. A Drive is the top-level container for a file system, such as OneDrive or SharePoint document libraries.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/drive-get?view=graph-rest-1.0
+      summary: Get drive from sites
+      description: The default drive (document library) for this site.
       operationId: sites_GetDrive
       parameters:
         - name: site-id
@@ -58714,11 +58705,8 @@ paths:
     get:
       tags:
         - sites.drive
-      summary: List available drives
-      description: 'Retrieve the list of Drive resources available for a target User, Group, or Site.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/drive-list?view=graph-rest-1.0
+      summary: Get drives from sites
+      description: The collection of drives (document libraries) under this site.
       operationId: sites_ListDrives
       parameters:
         - name: site-id
@@ -110624,6 +110612,10 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.chatMessageMention'
               description: 'List of entities mentioned in the chat message. Supported entities are: user, bot, team, and channel.'
+            messageHistory:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.chatMessageHistoryItem'
             messageType:
               $ref: '#/components/schemas/microsoft.graph.chatMessageType'
             policyViolation:
@@ -111336,11 +111328,13 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.openShiftChangeRequest'
+              description: The open shift requests in the schedule.
               x-ms-navigationProperty: true
             openShifts:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.openShift'
+              description: The set of open shifts in a scheduling group in the schedule.
               x-ms-navigationProperty: true
             schedulingGroups:
               type: array
@@ -112968,6 +112962,20 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.chatMessageHistoryItem:
+      title: chatMessageHistoryItem
+      type: object
+      properties:
+        actions:
+          $ref: '#/components/schemas/microsoft.graph.chatMessageActions'
+        modifiedDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+        reaction:
+          $ref: '#/components/schemas/microsoft.graph.chatMessageReaction'
+      additionalProperties:
+        type: object
     microsoft.graph.chatMessagePolicyViolation:
       title: chatMessagePolicyViolation
       type: object
@@ -114153,6 +114161,14 @@ components:
               $ref: '#/components/schemas/microsoft.graph.teamworkConversationIdentity'
           additionalProperties:
             type: object
+    microsoft.graph.chatMessageActions:
+      title: chatMessageActions
+      enum:
+        - reactionAdded
+        - reactionRemoved
+        - actionUndefined
+        - unknownFutureValue
+      type: string
     microsoft.graph.chatMessagePolicyViolationDlpActionTypes:
       title: chatMessagePolicyViolationDlpActionTypes
       enum:
