--- a/openApiDocs/v1.0/DirectoryObjects.yml
+++ b/openApiDocs/v1.0/DirectoryObjects.yml
@@ -223,7 +223,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-checkmembergroups?view=graph-rest-1.0
-      operationId: directoryObject_checkMemberGroups
+      operationId: directoryObject_checkMemberGroup
       parameters:
         - name: directoryObject-id
           in: path
@@ -275,7 +275,7 @@ paths:
       tags:
         - directoryObjects.Actions
       summary: Invoke action checkMemberObjects
-      operationId: directoryObject_checkMemberObjects
+      operationId: directoryObject_checkMemberObject
       parameters:
         - name: directoryObject-id
           in: path
@@ -331,7 +331,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getmembergroups?view=graph-rest-1.0
-      operationId: directoryObject_getMemberGroups
+      operationId: directoryObject_getMemberGroup
       parameters:
         - name: directoryObject-id
           in: path
@@ -387,7 +387,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getmemberobjects?view=graph-rest-1.0
-      operationId: directoryObject_getMemberObjects
+      operationId: directoryObject_getMemberObject
       parameters:
         - name: directoryObject-id
           in: path
@@ -492,7 +492,7 @@ paths:
       tags:
         - directoryObjects.Functions
       summary: Invoke function delta
-      operationId: directoryObject_delta
+      operationId: directoryObject_deltum
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -563,7 +563,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getavailableextensionproperties?view=graph-rest-1.0
-      operationId: directoryObject_getAvailableExtensionProperties
+      operationId: directoryObject_getAvailableExtensionProperty
       requestBody:
         description: Action parameters
         content:
@@ -611,7 +611,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getbyids?view=graph-rest-1.0
-      operationId: directoryObject_getGraphBPreIds
+      operationId: directoryObject_getGraphBPreId
       requestBody:
         description: Action parameters
         content:
@@ -664,7 +664,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-validateproperties?view=graph-rest-1.0
-      operationId: directoryObject_validateProperties
+      operationId: directoryObject_validateProperty
       requestBody:
         description: Action parameters
         content:
