--- a/openApiDocs/v1.0/Users.Actions.yml
+++ b/openApiDocs/v1.0/Users.Actions.yml
@@ -8287,7 +8287,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/contenttype-associatewithhubsites?view=graph-rest-1.0
-      operationId: user.drive.list.contentType_associateGraphWPreHubSites
+      operationId: user.drive.list.contentType_associateGraphWPreHubSite
       parameters:
         - name: user-id
           in: path
@@ -13402,7 +13402,7 @@ paths:
       tags:
         - users.Actions
       summary: Invoke action windowsDefenderUpdateSignatures
-      operationId: user.managedDevice_windowsDefenderUpdateSignatures
+      operationId: user.managedDevice_windowsDefenderUpdateSignature
       parameters:
         - name: user-id
           in: path
@@ -14031,7 +14031,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-checkmembergroups?view=graph-rest-1.0
-      operationId: user_checkMemberGroups
+      operationId: user_checkMemberGroup
       parameters:
         - name: user-id
           in: path
@@ -14083,7 +14083,7 @@ paths:
       tags:
         - users.Actions
       summary: Invoke action checkMemberObjects
-      operationId: user_checkMemberObjects
+      operationId: user_checkMemberObject
       parameters:
         - name: user-id
           in: path
@@ -14166,7 +14166,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/user-findmeetingtimes?view=graph-rest-1.0
-      operationId: user_findMeetingTimes
+      operationId: user_findMeetingTime
       parameters:
         - name: user-id
           in: path
@@ -14193,7 +14193,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/user-getmailtips?view=graph-rest-1.0
-      operationId: user_getMailTips
+      operationId: user_getMailTip
       parameters:
         - name: user-id
           in: path
@@ -14223,7 +14223,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getmembergroups?view=graph-rest-1.0
-      operationId: user_getMemberGroups
+      operationId: user_getMemberGroup
       parameters:
         - name: user-id
           in: path
@@ -14279,7 +14279,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getmemberobjects?view=graph-rest-1.0
-      operationId: user_getMemberObjects
+      operationId: user_getMemberObject
       parameters:
         - name: user-id
           in: path
@@ -14407,7 +14407,7 @@ paths:
       tags:
         - users.Actions
       summary: Invoke action revokeSignInSessions
-      operationId: user_revokeSignInSessions
+      operationId: user_revokeSignInSession
       parameters:
         - name: user-id
           in: path
@@ -14459,7 +14459,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/user-translateexchangeids?view=graph-rest-1.0
-      operationId: user_translateExchangeIds
+      operationId: user_translateExchangeId
       parameters:
         - name: user-id
           in: path
@@ -16134,7 +16134,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getavailableextensionproperties?view=graph-rest-1.0
-      operationId: user_getAvailableExtensionProperties
+      operationId: user_getAvailableExtensionProperty
       requestBody:
         description: Action parameters
         content:
@@ -16182,7 +16182,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-getbyids?view=graph-rest-1.0
-      operationId: user_getGraphBPreIds
+      operationId: user_getGraphBPreId
       requestBody:
         description: Action parameters
         content:
@@ -16235,7 +16235,7 @@ paths:
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/directoryobject-validateproperties?view=graph-rest-1.0
-      operationId: user_validateProperties
+      operationId: user_validateProperty
       requestBody:
         description: Action parameters
         content:
@@ -17263,6 +17263,8 @@ components:
               type: string
               description: The video teleconferencing ID. Read-only.
               nullable: true
+            watermarkProtection:
+              $ref: '#/components/schemas/microsoft.graph.watermarkProtectionValues'
             attendanceReports:
               type: array
               items:
@@ -18837,6 +18839,20 @@ components:
           nullable: true
         scope:
           $ref: '#/components/schemas/microsoft.graph.lobbyBypassScope'
+      additionalProperties:
+        type: object
+    microsoft.graph.watermarkProtectionValues:
+      title: watermarkProtectionValues
+      type: object
+      properties:
+        isEnabledForContentSharing:
+          type: boolean
+          description: Indicates whether to apply a watermark to any shared content.
+          nullable: true
+        isEnabledForVideo:
+          type: boolean
+          description: Indicates whether to apply a watermark to everyone's video feed.
+          nullable: true
       additionalProperties:
         type: object
     microsoft.graph.meetingAttendanceReport:
@@ -25289,6 +25305,10 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.chatMessageMention'
               description: 'List of entities mentioned in the chat message. Supported entities are: user, bot, team, and channel.'
+            messageHistory:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.chatMessageHistoryItem'
             messageType:
               $ref: '#/components/schemas/microsoft.graph.chatMessageType'
             policyViolation:
@@ -25993,11 +26013,13 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.openShiftChangeRequest'
+              description: The open shift requests in the schedule.
               x-ms-navigationProperty: true
             openShifts:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.openShift'
+              description: The set of open shifts in a scheduling group in the schedule.
               x-ms-navigationProperty: true
             schedulingGroups:
               type: array
@@ -27538,6 +27560,20 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.chatMessageHistoryItem:
+      title: chatMessageHistoryItem
+      type: object
+      properties:
+        actions:
+          $ref: '#/components/schemas/microsoft.graph.chatMessageActions'
+        modifiedDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+        reaction:
+          $ref: '#/components/schemas/microsoft.graph.chatMessageReaction'
+      additionalProperties:
+        type: object
     microsoft.graph.chatMessagePolicyViolation:
       title: chatMessagePolicyViolation
       type: object
@@ -28607,6 +28643,14 @@ components:
               $ref: '#/components/schemas/microsoft.graph.teamworkConversationIdentity'
           additionalProperties:
             type: object
+    microsoft.graph.chatMessageActions:
+      title: chatMessageActions
+      enum:
+        - reactionAdded
+        - reactionRemoved
+        - actionUndefined
+        - unknownFutureValue
+      type: string
     microsoft.graph.chatMessagePolicyViolationDlpActionTypes:
       title: chatMessagePolicyViolationDlpActionTypes
       enum:
